# minecraft

./: CMakeLists.txt
Assets/Shaders/: Basic.frag
Source/: Game.cpp  Game.h  Main.cpp  Window.cpp  Window.h
Source/Rendering/: Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexLayout.cpp  VertexLayout.h
assets/shaders/: shader.frag  shader.vert
dependencies/glad/include/glad/: glad.h
dependencies/glm/: LICENSE
src/: chunk.cpp  chunk.h  glad.c  input.cpp  input.h  main.cpp  mesh.cpp  mesh.h  player.cpp  player.h  renderer.cpp  renderer.h  shader.cpp  shader.h  texture.cpp  texture.h  vertex_layout.cpp  vertex_layout.h  window.cpp  window.h
